Fixes top vertical alignment for li items.

--- a/app/assets/stylesheets/pets.css
+++ b/app/assets/stylesheets/pets.css
@@ -62,6 +62,7 @@ button {
   position: relative;
   top: 0;
   width: 30.33%;
+  vertical-align: top;
 }
 
 .pet-entry li {
